Quick fix for unreadable colors by using randomizer within range of readable colors

--- a/frontend/src/assets/Colors.css
+++ b/frontend/src/assets/Colors.css
@@ -240,7 +240,7 @@ input:checked + .slider {
 }
 
 .ModuleTile {
-    color: var(--color-text-primary);
+    color: var(--color-text-tertiary);
     outline: 1px solid var(--color-border-secondary);
 }
 
